Changed the hero design

--- a/style/style.css
+++ b/style/style.css
@@ -76,14 +76,41 @@ main {
 }
 
 .hero-content {
+    max-width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 32px;
+    gap: 60px;
+}
+
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.hero-icons {
+    display: flex;
+    flex-direction: row;
+}
+
+div.hero-icons a {
+    padding: 60px 35px;
+    border: 2px solid #111111;
+    border-radius: 500px;
+
+    text-align: center;
+}
+
+div.hero-icons a:hover {
+    background-color: #111111;
+    color: #F7F3E8;
+    text-decoration: underline;
+    transition: 0.3s;
 }
 
 .hero-content h1 {
-    font-size: 72px;
+    font-size: 76px;
     font-family: 'Abril FatFace', 'Roboto', sans-serif;
     font-weight: 400;
 }
@@ -95,9 +122,8 @@ main {
 }
 
 .hero-content p {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 300;
-    text-indent: 20px;
 }
 
 .hero-image {
