--- a/style/style.css
+++ b/style/style.css
@@ -403,3 +403,109 @@ div.p4content a:hover {
     text-decoration: underline;
     transition: 0.3s;
 }
+
+/* FOOTER */
+footer {
+    height: 25vh;
+    background-color: #111111;
+    color: #F7F3E8;
+}
+
+footer > section {
+    max-width: 1200px;
+    height: 100%;
+    margin: auto;
+    padding: 36px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+footer header {
+    width: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 36px;
+}
+
+div.socialmedia {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 36px;
+}
+
+div.socialmedia img {
+    width: 48px;
+    height: auto;
+}
+
+div.subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+}
+
+div.subscribe h2 {
+    font-size: 28px;
+}
+
+div.subscribe p {
+    color: #9b9b9b;
+    font-size: 12px;
+}
+
+div.subscribe form {
+    padding: 5px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3d3d3d;
+    border-radius: 5px;
+    border: 1px solid #F7F3E8;
+}
+
+div.subscribe input[type= email] {
+    
+    background-color: #3d3d3d;
+    color: white;
+    border: none;
+}
+
+div.subscribe input[type= submit] {
+    background-color: #3d3d3d;
+    color: #F7F3E8;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+div.contact {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+div.contact h2 {
+    font-size: 28px;
+}
+
+div.contact p {
+    color: #9b9b9b;
+    font-size: 12px;
+}
+
+div.contact > div.text {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+div.subscribe > div.text {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
