--- a/style/style.css
+++ b/style/style.css
@@ -299,6 +299,7 @@ section.page03 div.card {
     background-color: #111111;
     color: #F7F3E8;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.315);
+    border-radius: 10px;
 }
 
 section.page03 div.card-content {
